--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ ul.slides {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 800;
+    z-index: 200;
     
     
     font-size: 10em;
@@ -82,7 +82,7 @@ ul.slides {
     color: #fff;
 }
     .carousel-controls label {
-        /* display: none; */
+        display: none;
         height: 100%;
         margin: auto;
         opacity: 0.5;
@@ -107,7 +107,7 @@ ul.slides {
 
 input:checked + .slide-container .slide-image {
     opacity: 1;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
 input:checked + .slide-container .carousel-controls label {
